[package]
name = "xassembler"
version = "0.5.1"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
description = "Compiler tools for the xasm programming language"
readme = "README.md"
homepage = "https://github.com/adam-mcdaniel/xassembler"
repository = "https://github.com/adam-mcdaniel/xassembler"
documentation = "https://docs.rs/xassembler"
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
pest = "2.1"
pest_derive = "2.1"

